# swift-testing

Sources/: CMakeLists.txt
Sources/Testing/: CMakeLists.txt
Sources/Testing/ABI/EntryPoints/: SwiftPMEntryPoint.swift
Sources/Testing/ExitTests/: WaitFor.swift
Sources/TestingMacros/: CMakeLists.txt
cmake/modules/: SwiftModuleInstallation.cmake
